--- a/styles/style.css
+++ b/styles/style.css
@@ -56,6 +56,16 @@ input {
     border-color: #134077;
 }
 
+.box-main-register {
+    background-color: white;
+    width: 662px;
+    height: 604px;
+    border: 1px;
+    border-style: solid;
+    border-radius: 19px;
+    border-color: #134077;
+}
+
 .pass {
     position: relative;
 }
